--- a/src/components/Character/Character.css
+++ b/src/components/Character/Character.css
@@ -1,6 +1,7 @@
 .character_container
 {
   display: flex;
+  position: relative;
   flex-direction: column;
   width:200px;
   height:250px;
@@ -16,19 +17,48 @@
 .character_container:hover
 {
   transition: all 0.3s ease;
+  box-shadow: 0 7px 50px rgba(0, 0, 0, 0.46);
 }
 
 .avatar
 {
   width:200px;
+  position: relative;
+}
+.name
+{
+  position: relative;
 }
 .image_container
 {
   display: flex;
+  position: relative;
   justify-content: center;
   align-items: center;
   max-width:200px;
   max-height:200px;
-  background-color:rgb(250,250,250);
   overflow: hidden;
+}
+.shadow
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width:100%;
+  z-index:2;
+  height: 100%;
+  background-color:white;
+  transition: all 0.5s ease;
+  opacity:0;
+}
+.shadow:hover
+{
+  opacity:0.2;
+  transition: all 0.5s ease;
+}
+.icon
+{
+  font-size: 5em;
+  color:rgb(25,25,25);
 }
