--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -4,7 +4,11 @@
   width:100%;
   height:100%;
   flex-direction: row;
+  padding-top:20px;
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: white;
+  -moz-box-shadow:    inset 0 0 5em rgba(25,25,25, 0.3);
+  -webkit-box-shadow: inset 0 0 5em rgba(25,25,25, 0.3);
+  box-shadow:         inset 0 0 5em rgba(25,25,25, 0.3);
 }
