--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,11 +4,20 @@
   justify-content: center;
   align-items: center;
   width:100%;
-  height:200px;
-  background-color: rgb(20,20,20);
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  height:170px;
+  background-color: rgb(226,20,31);
+  box-shadow: 0 1px 5px redß;
 }
 .title
 {
   height:100%;
+}
+.header_side
+{
+  flex:1;
+  height:100%;
+  background-color:rgb(226,20,31);
+  -moz-box-shadow:    inset 0 0 5em rgb(25,25,25);
+  -webkit-box-shadow: inset 0 0 5em rgb(25,25,25);
+  box-shadow:         inset 0 0 5em rgb(25,25,25);
 }
