--- a/src/components/CharacterView/CharacterView.css
+++ b/src/components/CharacterView/CharacterView.css
@@ -13,8 +13,9 @@
 {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     width:90%;
-    min-height:50%;
+    height:80%;
     max-width:800px;
     background-color: white;
     z-index:15;
@@ -28,4 +29,36 @@
     font-size:1.3em;
     color:rgb(226,20,31);
     cursor: pointer;
+}
+.characterview_avatar
+{
+    width:130px;
+    height:130px;
+    margin-left:25px;
+    border-radius:500px;
+    overflow: hidden;
+}
+.comics_container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color:none;
+    padding-left:25px;
+    width:100%;
+}
+.characterview_header
+{
+    display: flex;
+    width:100%;
+    min-height:200px;
+    background-color:rgb(243,243,243);
+    flex-direction: column;
+    align-items: center;
+}
+.comicname
+{
+    margin-top:5px;
+    margin-bottom:5px;
+    margin-left:25px;
 }
