--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -5,6 +5,7 @@
   height:100%;
   flex-direction: row;
   padding-top:20px;
+  padding-bottom:20px;
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: white;
