--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -13,3 +13,16 @@
   -webkit-box-shadow: inset 0 0 5em rgba(25,25,25, 0.3);
   box-shadow:         inset 0 0 5em rgba(25,25,25, 0.3);
 }
+.loader
+{
+  width:100%;
+  cursor: pointer;
+}
+.loader_icon
+{
+  width:100%;
+  margin-top:25px;
+  margin-bottom:25px;
+  color:rgb(226,20,31);
+  font-size:3em;
+}
