--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -2,7 +2,7 @@
 {
   display: flex;
   width:100%;
-  height:100%;
+  min-height:calc(100vh - 170px);
   flex-direction: row;
   padding-top:20px;
   padding-bottom:20px;
