--- a/src/components/CharacterView/CharacterView.css
+++ b/src/components/CharacterView/CharacterView.css
@@ -25,20 +25,21 @@
 }
 .close_button
 {
+    position: fixed;
     align-self: flex-end;
-    margin-right:15px;
     margin-top:15px;
-    font-size:1.3em;
-    color:rgb(226,20,31);
+    padding-right:15px;
+    font-size:1.7em;
+    color:rgb(25,25,25);
     cursor: pointer;
     z-index:14;
 }
 .characterview_avatar_container
 {
-  display: flex;
+  position: relative;
   z-index:14;
-  width:130px;
-  height:130px;
+  width:150px;
+  height:150px;
   margin-left:25px;
   border-radius:500px;
   overflow: hidden;
@@ -48,16 +49,27 @@
 }
 .characterview_avatar
 {
-  width:100%;
+  margin:auto;
+  min-height:150px;
+  min-width:150px;
+  max-width:170px;
+  max-height:170px;
 }
 .comics_container
 {
     display: flex;
+    background-color: white;
     flex-direction: column;
     align-items: flex-start;
     background-color:none;
     padding-left:25px;
+    margin:15px;
+    padding:15px;
+    border-radius:3px;
     width:100%;
+    -moz-box-shadow:    0 0 5em rgba(25,25,25, 0.2);
+    -webkit-box-shadow: 0 0 5em rgba(25,25,25, 0.2);
+    box-shadow:          0 0 5em rgba(25,25,25, 0.2);
 }
 .characterview_header
 {
@@ -67,6 +79,7 @@
     min-height:200px;
     background-color:rgb(243,243,243);
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     overflow: hidden;
     z-index:11;
@@ -78,11 +91,35 @@
   z-index:13;
   opacity: 0.4;
   align-self: center;
-  margin-top:-30%;
 }
 .comicname
 {
+    position: relative;
     margin-top:5px;
     margin-bottom:5px;
     margin-left:25px;
+}
+.character_info
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  min-height:70px;
+  background-color:white;
+}
+.name
+{
+  color:rgb(25,25,25);
+}
+.character_container_main
+{
+  display: flex;
+  width:100%;
+  min-height:100%;
+  background-color:rgb(250,250,250);
+  -moz-box-shadow:    inset 0 0 5em rgba(25,25,25, 0.2);
+  -webkit-box-shadow: inset 0 0 5em rgba(25,25,25, 0.2);
+  box-shadow:         inset 0 0 5em rgba(25,25,25, 0.2);
 }
