--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,7 +18,7 @@
   flex:1;
   height:100%;
   background-color:rgb(226,20,31);
-  -moz-box-shadow:    inset 0 0 5em rgb(25,25,25);
-  -webkit-box-shadow: inset 0 0 5em rgb(25,25,25);
-  box-shadow:         inset 0 0 5em rgb(25,25,25);
+  -moz-box-shadow:    inset 0 0 5em rgba(25,25,25, 0.7);
+  -webkit-box-shadow: inset 0 0 5em rgba(25,25,25, 0.7);
+  box-shadow:         inset 0 0 5em rgba(25,25,25, 0.7);
 }
