--- a/src/components/CharacterView/CharacterView.css
+++ b/src/components/CharacterView/CharacterView.css
@@ -1,11 +1,15 @@
+.characterview
+{
+  display:flex;
+  flex-direction: column;
+  width:100%;
+}
 .characterview_container
 {
-    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     width:100%;
-    height: 100%;
     background-color: rgba(25,25,25,0.3);
     z-index:10;
 }
@@ -14,25 +18,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width:90%;
-    height:80%;
+    width:100%;
+    height:100%;
     border-radius:3px;
-    max-width:800px;
     background-color: white;
     z-index:15;
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-.close_button
-{
-    position: fixed;
-    align-self: flex-end;
-    margin-top:15px;
-    padding-right:15px;
-    font-size:1.7em;
-    color:rgb(25,25,25);
-    cursor: pointer;
-    z-index:14;
 }
 .characterview_avatar_container
 {
@@ -50,6 +40,7 @@
 .characterview_avatar
 {
   margin:auto;
+  align-self: center;
   min-height:150px;
   min-width:150px;
   max-width:170px;
@@ -78,7 +69,7 @@
     width:100%;
     min-height:200px;
     background-color:rgb(243,243,243);
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     overflow: hidden;
@@ -140,4 +131,41 @@
 .icon_comics
 {
   color:reb(25,25,25);
+}
+.characternotfound_container
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  margin-top:75px;
+}
+.characternotfound_title
+{
+  color:rgb(226,20,31);
+}
+.warning_icon
+{
+  color:rgb(226,20,31);
+  font-size:3em;
+  margin-bottom:25px;
+}
+.back_icon
+{
+  position: absolute;
+  left:50px;
+  font-size: 2.5em;
+  cursor: pointer;
+  z-index:14;
+  color:rgb(25,25,25);
+}
+.back_icon_notfound
+{
+  font-size: 2.5em;
+  cursor: pointer;
+  z-index:14;
+  margin-top:25px;
+  margin-bottom:100px;
+  color:rgb(25,25,25);
 }
