--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -7,7 +7,7 @@
   padding-top:20px;
   padding-bottom:20px;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: white;
   -moz-box-shadow:    inset 0 0 5em rgba(25,25,25, 0.3);
   -webkit-box-shadow: inset 0 0 5em rgba(25,25,25, 0.3);
